0.9.3/_sources/gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-iris/plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-iris/plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-iris_plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-iris_plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.py:


IRIS: 2D-IRIS analysis (plugin)
=================================

This example introduces the 2D-IRIS analysis provided by the optional
``spectrochempy-iris`` plugin.

Requires the official ``spectrochempy-iris`` plugin.
Install with: ``pip install spectrochempy[iris]``.

.. GENERATED FROM PYTHON SOURCE LINES 17-18

.. code-block:: default









.. GENERATED FROM PYTHON SOURCE LINES 20-22

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 23-25

The IRIS plugin provides package-level workflows under ``scp.iris`` and
dataset-bound helpers under ``dataset.iris``.

.. GENERATED FROM PYTHON SOURCE LINES 25-55

.. code-block:: default


    # Load CO adsorption data
    ds = scp.read_omnic("irdata/CO@Mo_Al2O3.SPG")[:, 2250.0:1950.0]

    # Attach pressure coordinates
    pressure = [
        0.003,
        0.004,
        0.009,
        0.014,
        0.021,
        0.026,
        0.036,
        0.051,
        0.093,
        0.150,
        0.203,
        0.300,
        0.404,
        0.503,
        0.602,
        0.702,
        0.801,
        0.905,
        1.004,
    ]
    ds.y = scp.Coord(pressure, title="Pressure", units="torr")

    print(f"Loaded dataset: {ds}")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Loaded dataset: NDDataset: [float64] a.u. (shape: (y:19, x:312))




.. GENERATED FROM PYTHON SOURCE LINES 56-57

Build the IRIS kernel from the dataset accessor, then run the analysis:

.. GENERATED FROM PYTHON SOURCE LINES 57-65

.. code-block:: default


    K = ds.iris.kernel_matrix(kernel_type="langmuir", q=[-7, -1, 50])
    iris_analysis = scp.iris.IRIS(reg_par=[-10, 1, 12])
    iris_analysis.fit(ds, K)

    _ = iris_analysis.f[-7].plot_contour(colorbar=True)

    # scp.show()



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-iris/images/sphx_glr_plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro_001.png
   :alt: plot spectrochempy iris  analysis  a decomposition  plot iris intro
   :srcset: /gettingstarted/examples/gallery/auto_examples_plugins/spectrochempy-iris/images/sphx_glr_plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  4.618 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_plugins_spectrochempy-iris_plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.py <plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.ipynb <plot_spectrochempy_iris__analysis__a_decomposition__plot_iris_intro.ipynb>`
